@@ -2,10 +2,22 @@ package ca.gc.aafc.dina.filter;
 
 import org.junit.jupiter.api.Test;
 
+import com.querydsl.core.types.Ops;
+
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class AntlrGrammarTest {
+
+  @Test
+  public void onFilterAsString_structureReturned2() {
+    String content =
+      "filter[type][EQ]=metadata&filter[name][EQ]=drawing.png&filter[group][EQ]=test";
+
+    QueryComponent queryComponent = QueryStringParser.parse(content);
+    queryComponent.getFilterExpression();
+  }
 
   @Test
   public void onFilterAsString_structureReturned() {
@@ -22,7 +34,7 @@ public class AntlrGrammarTest {
 
     assertEquals("position", queryComponent.getSorts().get(0));
     assertEquals("-name", queryComponent.getSorts().get(1));
-    assertEquals("author.name", queryComponent.getIncludes().get(0));
+    assertTrue(queryComponent.getIncludes().contains("author.name"));
 
     assertEquals(5, queryComponent.getPageOffset());
     assertEquals(1, queryComponent.getPageLimit());
@@ -32,11 +44,11 @@ public class AntlrGrammarTest {
     assertNotNull(queryComponent2.getFilters());
 
     FilterGroup fg1 = queryComponent2.getFilterGroup().orElseThrow();
-    assertEquals("John Doe", ((FilterExpression)fg1.getComponents().get(0)).value());
+    assertEquals("John Doe", ((FilterExpression)fg1.getComponents().getFirst()).value());
     assertEquals("position", queryComponent2.getSorts().get(0));
     assertEquals("-name", queryComponent2.getSorts().get(1));
-    assertEquals("author._name", queryComponent2.getIncludes().get(0));
-    assertEquals("author.age", queryComponent2.getIncludes().get(1));
+    assertTrue(queryComponent2.getIncludes().contains("author._name"));
+    assertTrue(queryComponent2.getIncludes().contains("author.age"));
 
     assertEquals(20, queryComponent2.getPageOffset());
     assertEquals(10, queryComponent2.getPageLimit());
@@ -50,11 +62,20 @@ public class AntlrGrammarTest {
 
     assertEquals("position", queryComponent.getSorts().get(0));
     assertEquals("-name", queryComponent.getSorts().get(1));
-    assertEquals("author.name", queryComponent.getIncludes().get(0));
+    assertTrue(queryComponent.getIncludes().contains("author.name"));
 
     assertEquals(5, queryComponent.getPageOffset());
     assertEquals(1, queryComponent.getPageLimit());
   }
 
-  
+  @Test
+  public void onNoOperator_EqualOperatorUsed() {
+    String content = "filter[type]=metadata&filter[name]=drawing.png&filter[group][EQ]=test";
+
+    QueryComponent queryComponent = QueryStringParser.parse(content);
+    FilterGroup fg = queryComponent.getFilterGroup().orElseThrow();
+
+    assertEquals("metadata", ((FilterExpression)fg.getComponents().getFirst()).value());
+    assertEquals(Ops.EQ, ((FilterExpression)fg.getComponents().getFirst()).operator());
+  }
 }
